@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.67 2018/08/16 09:24:15 wiz Exp $
+# $NetBSD: Makefile,v 1.68 2019/08/09 15:39:04 brook Exp $
 #
 
 COMMENT=	Monetary, financial and related applications
 
 SUBDIR+=	QuantLib
 SUBDIR+=	R-TTR
+SUBDIR+=	R-bayesm
 SUBDIR+=	R-fAsianOptions
 SUBDIR+=	R-fBasics
 SUBDIR+=	R-fOptions
